Add JWT auth in test route
